--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,6 +6,7 @@ pandas==2.1.2
 Pillow==9.3.0
 Pillow==10.1.0
 scipy==1.11.3
+seaborn==0.13.0
 torch==2.0.1+cu117
 torchsummary==1.5.1
 torchvision==0.15.2+cu117
